fix(navigation-bar): :bug: update z-index

--- a/src/app/navigation/navigation-bar/navigation-bar.component.css
+++ b/src/app/navigation/navigation-bar/navigation-bar.component.css
@@ -5,7 +5,7 @@
 :host {
   display: flex;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   scrollbar-width: none;
   /* Firefox */
   -ms-overflow-style: none;
